--- a/chub/templates/chub/login.html
+++ b/chub/templates/chub/login.html
@@ -35,7 +35,7 @@
                 <form method="POST">
                     {% csrf_token %}
                     {{form}}
-                    <button type="submit">Login</button>
+                    <button class="button">Login</button>
                 </form>
           
             </div>
