--- a/chub/frontent/css/style2.css
+++ b/chub/frontent/css/style2.css
@@ -5,7 +5,7 @@ body{
     font-size: 55px;
     height: 100vh;
     margin: 0px;
-   padding: 20px;
+   padding-right: 50px;
    padding-left: 50px;
    box-sizing: border-box;
    font-family:'Avenir LT Std';
