--- a/chub/frontent/css/style3.css
+++ b/chub/frontent/css/style3.css
@@ -3,7 +3,7 @@ body {
     background-color: black;
     color: white;
     font-size: 55px;
-    height: 100vh;
+    /* height: 100vh; */
     margin: 0px;
     padding-bottom: 60px;
     box-sizing: border-box;
@@ -130,6 +130,9 @@ img {
     height: 40%;
 
     border-radius: 15px;
+}
+.answer{
+    font: 10px;
 }
 
 @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
