--- a/chub/frontent/css/style3.css
+++ b/chub/frontent/css/style3.css
@@ -3,7 +3,7 @@ body {
     background-color: black;
     color: white;
     font-size: 55px;
-    height: 100vh;
+    /* height: 100; */
     margin: 0px;
     padding-bottom: 60px;
     box-sizing: border-box;
