--- a/chub/frontent/css/style3.css
+++ b/chub/frontent/css/style3.css
@@ -17,9 +17,20 @@ body {
     align-items: center;
 }
 
+.lq {
+    height: 81%;
+    width: 95%;
+    font-size: 28px;
+    margin-top: 0px;
+}
+
 .direction {
     flex-direction: column;
 
+}
+
+ul {
+    list-style-type: none;
 }
 
 .content {
@@ -35,11 +46,13 @@ body {
     height: 19%;
     width: 70%;
 }
-.link{
+
+.link {
 
     cursor: default;
 
 }
+
 .size2 {
     height: 81%;
     width: 30%;
@@ -64,10 +77,12 @@ hr {
     border: 2px solid black;
     border-radius: 5px;
 }
-.img2{
-width: 200px;
+
+.img2 {
+    width: 200px;
     height: 200px;
 }
+
 .button {
     background-color: #1526e0;
     border: none;
@@ -99,9 +114,11 @@ a {
     color: white;
     cursor: default;
 }
-p{
+
+p {
     cursor: default;
 }
+
 label {
     width: 100%;
     height: 50px;
