--- a/chub/frontent/css/style3.css
+++ b/chub/frontent/css/style3.css
@@ -3,6 +3,7 @@ body {
     background-color: black;
     color: white;
     font-size: 55px;
+    /* height: 100vh; */
     margin: 0px;
     padding-bottom: 60px;
     box-sizing: border-box;
@@ -81,8 +82,7 @@ width: 200px;
     border-radius: 15px;
     height: 50px;
     width: 150px;
-    margin: 20px;
-    margin-left: 50px;
+   
 }
 
 .margin_top {
@@ -116,7 +116,6 @@ input {
     border-radius: 10px;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 15px;
 
 }
 
