--- a/chub/templates/chub/guidelines.html
+++ b/chub/templates/chub/guidelines.html
@@ -63,7 +63,7 @@
         </div>
 
         <div class="margin_bottom">
-            <button class="button"><a onclick="window.location.replace('{% url "login"%}')"> Let's Start</a></button>
+            <button class="button"><a onclick="window.location.replace('{% url "1"%}')"> Let's Start</a></button>
         </div>
     </div>
     <style>
