--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -43,7 +43,9 @@
                 </div>
 
                 <div >
-                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    <!-- <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button> -->
+                
+                <button ><a onclick="window.location.replace('{% url "2" %}')">Submit</a></button>
                 </div>
             </div>
            
@@ -53,5 +55,23 @@
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
         </style>
 </body>
+<script>
+    
+    document.getElementsByTagName("button")[0].addEventListener("click",(e)=>{
+            e.preventDefault()
+            var data={
+                question: 1,    
+                score:80,
+            }
+        fetch("{% url '1' %}",{
+            method:"POST" ,
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body : JSON.stringify(data)
+        })  
+    })
+    
 
+</script>
 </html>
