--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -39,7 +39,7 @@
             <div>
                 <div >
                     <label for="Answer">Answer</label>
-                    <input type="text" name="Answer">
+                    <!-- <input type="text" name="Answer"> -->
                 </div>
 
                 <div >
