--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -57,7 +57,7 @@
 </body>
 <script>
     
-    document.getElementsByTagName("button")[0].addEventListener("click",(e)=>{
+    document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
             e.preventDefault()
             var data={
                 question: 1,    
