--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -39,13 +39,13 @@
             <div>
                 <div >
                     <label for="Answer">Answer</label>
-                    <!-- <input type="text" name="Answer"> -->
+                    <input type="text" name="Answer"> 
                 </div>
 
                 <div >
                     <!-- <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button> -->
                 
-                <button ><a onclick="window.location.replace('{% url "2" %}')">Submit</a></button>
+                <button class="button"><a onclick="window.location.replace('{% url "2" %}')">Submit</a></button>
                 </div>
             </div>
            
