--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -42,7 +42,7 @@
     
                     <div >
                         <!-- <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button> -->
-                        <button ><a onclick="window.location.replace('{% url "2" %}')">B</a></button>
+                        <button>Submit</button>
                     </div>
                 </div>
                
@@ -53,22 +53,40 @@
         </style>
 </body>
 <script>
-    
-    document.getElementsByTagName("button")[0].addEventListener("click",(e)=>{
-            e.preventDefault()
+let correct =true;
+    document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
+      e.preventDefault()
+        if(document.getElementById("input").value!='B')   
+        { 
             var data={
-                question: 3,    
-                score:80,
+                question: 1,    
+                score:0,
+            } 
+            correct=false;
+        }
+        else{
+            var data={
+                question: 1,    
+                score:1,
             }
+        }
         fetch("{% url '3' %}",{
             method:"POST" ,
             headers: {
                 'Content-Type': 'application/json'
             },
             body : JSON.stringify(data)
-        })  
-    })
+        }) 
+        if(correct==true)
+        {
+            window.location.replace('{% url "6" %}')
+        }
+        else{
+            window.location.replace('{% url "12" %}')
+        }
+     
+     } )
     
-
-</script>
+    
+    </script>
 </html>
