--- a/chub/templates/chub/Q12.html
+++ b/chub/templates/chub/Q12.html
@@ -42,7 +42,7 @@
                 </div>
 
                 <div >
-                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    <button class="button "><a>Submit</a></button>
                 </div>
             </div>
            
@@ -52,5 +52,40 @@
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
         </style>
 </body>
-
+<script>
+    let correct =true;
+        document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
+          e.preventDefault()
+            if(document.getElementById("input").value!='B')   
+            { 
+                var data={
+                    question: 1,    
+                    score:0,
+                } 
+                correct=false;
+            }
+            else{
+                var data={
+                    question: 1,    
+                    score:1,
+                }
+            }
+            fetch("{% url '12' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            }) 
+            if(correct==true)
+            {
+                window.location.replace('{% url "6" %}')
+            }
+            else{
+                window.location.replace('{% url "11" %}')
+            }
+         
+         } )      
+        
+        </script>
 </html>
