--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -58,5 +58,41 @@
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
         </style>
 </body>
-
+<script>
+    let correct =true;
+        document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
+          e.preventDefault()
+            if(document.getElementById("input").value!='B')   
+            { 
+                var data={
+                    question: 1,    
+                    score:0,
+                } 
+                correct=false;
+            }
+            else{
+                var data={
+                    question: 1,    
+                    score:1,
+                }
+            }
+            fetch("{% url '15' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            }) 
+            if(correct==true)
+            {
+                window.location.replace('{% url "9" %}')
+            }
+            else{
+                window.location.replace('{% url "6" %}')
+            }
+         
+         } )
+        
+        
+        </script>
 </html>
