--- a/chub/templates/chub/Q13.html
+++ b/chub/templates/chub/Q13.html
@@ -31,11 +31,11 @@
 </p>
                 <br>
                 <br>
-                Technothlon is an International School Championship organized by the IIT Guwahati. Technothlon began in 2004 with an aim to ‘Inspire Young Minds’. Starting on its journey with a participation of 200 students confined to the city of Guwahati, over the next 17 years Technothlon has expanded its reach to over 450+ cities all over India and various centers abroad.                <p>
+                Technothlon is an International School Championship organized by the IIT Guwahati. Technothlon began in 2004 with an aim to ‘Inspire Young Minds’. Starting on its journey with a participation of <a onclick="window.location.replace('{% url "9" %}')">200</a> students confined to the city of Guwahati, over the next <a onclick="window.location.replace('{% url "6" %}')">17</a> years Technothlon has expanded its reach to over <a onclick="window.location.replace('{% url "17" %}')">450</a>+ cities all over India and various centers abroad.                <p>
             </p>
 
             <p>
-                The contest is organized over 2 rounds: Round 1 is a written preliminary examination, Prelims, which takes place in numerous schools all over India in July (Online this year due to Pandemic) and ,  Round 2 is Mains - which is conducted at IIT Guwahati, among the top 50 teams/students from each IX-X(Junior Squad) and XI-XII(Hauts Squad) class students. It is a team-based event—two students participate as a team (individual this year due to pandemic), attempting the paper together and also participate in the Mains event as a team (individual this year due to pandemic).
+                The contest is organized over <a onclick="window.location.replace('{% url "6" %}')">2</a> rounds: Round <a onclick="window.location.replace('{% url "9" %}')">1</a> is a written preliminary examination, Prelims, which takes place in numerous schools all over India in July (Online this year due to Pandemic) and ,  Round 2 is Mains - which is conducted at IIT Guwahati, among the top <a onclick="window.location.replace('{% url "17" %}')">50</a> teams/students from each IX-X(Junior Squad) and XI-XII(Hauts Squad) class students. It is a team-based event—two students participate as a team (individual this year due to pandemic), attempting the paper together and also participate in the Mains event as a team (individual this year due to pandemic).
             </p>
           
 
