all input  questions update

--- a/chub/templates/chub/Q11.html
+++ b/chub/templates/chub/Q11.html
@@ -46,7 +46,7 @@
             <div>
                 <div >
                     <label for="Answer">Answer</label>
-                    <input type="text" name="Answer">
+                    <input type="text" id ="input" name="Answer">
                 </div>
 
                 <div >
