--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -44,11 +44,11 @@
             <div>
                 <div >
                     <label for="Answer">Answer</label>
-                    <input type="text" name="Answer">
+                    <input type="text" id="input" name="Answer">
                 </div>
 
                 <div >
-                    <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    <button class="button "><a>Submit</a></button>
                 </div>
             </div>
            
