--- a/chub/templates/chub/Q21.html
+++ b/chub/templates/chub/Q21.html
@@ -66,7 +66,7 @@
                     </div>
 
                     <div>
-                        <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                        <button class="button "><a>Submit</a></button>
                        
                     </div>
                 </div>
@@ -77,7 +77,43 @@
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
     </style>
 </body>
-
+<script>
+    let correct =true;
+        document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
+          e.preventDefault()
+            if(document.getElementById("input").value.toLowerCase()!='heroine')   
+            { 
+                var data={
+                    question: 1,    
+                    score:0,
+                } 
+                correct=false;
+            }
+            else{
+                var data={
+                    question: 1,    
+                    score:1,
+                }
+            }
+            fetch("{% url '21' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            }) 
+            // if(correct==true)
+            // {
+            //     window.location.replace('{% url "9" %}')
+            // }
+            // else{
+            //     window.location.replace('{% url "6" %}')
+            // }
+         
+         } )
+        
+        
+        </script>
 </html>
 
 
