--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -28,9 +28,9 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                 <p>   There are 2 trains A and B and 7 stations between them in order of 1 to 7. The time taken by each train to go from ith station to i+1th station is given below. 
+                 <p>   There are 2 trains A and B and 7 stations between them in order of 1 to 7. The time taken by each train to go from ith station to (i+1)th station is given below. 
                     <br>
-                    1-4 hrs-2-3 hrs-3-8 hrs-4-2 hrs-5-6 hrs-6-5 hrs-7 
+                    1 - 4 hrs - 2 - 3 hrs - 3 - 8 hrs - 4 - 2 hrs - 5 - 6 hrs - 6 - 5 hrs - 7 
                    <br> 
                     Train B can start moving from ith station only when train A has reached (i+1)th station otherwise has to wait. 
                     
@@ -40,7 +40,7 @@
                     <br><br>
                 </div>
             </div>
-            <!-- Answer  -  Dead   -->
+            <!-- Answer  -  36 hrs   -->
             <div>
                 <div >
                     <label for="Answer">Answer</label>
