--- a/chub/templates/chub/Q4.html
+++ b/chub/templates/chub/Q4.html
@@ -40,7 +40,7 @@
                 The number π (/paɪ/; spelled out as "pi") is a mathematical constant that is the ratio of a circle's circumference to its diameter, approximately equal to 3.14159. The number π appears in many formulas across mathematics and physics. It is an irrational number, meaning that it cannot be expressed exactly as a ratio of two integers, although fractions such as 22/7 are commonly used to approximate it. Consequently, its decimal representation never ends, nor enters a permanently repeating pattern. It is a transcendental number, meaning that it cannot be a solution of an equation involving only sums, products, powers, and integers. The transcendence of π implies that it is impossible to solve the ancient challenge of squaring the circle with a compass and straightedge. The decimal digits of π appear to be randomly distributed,[a] but no proof of this conjecture has been found.
             </p>
             <p>
-                pi=3.1415926535897932384626433...
+                pi=<a onclick="window.location.replace('{% url "12" %}')">3</a>.1<a onclick="window.location.replace('{% url "10" %}')">4</a>159265<a onclick="window.location.replace('{% url "12" %}')">3</a>589793<a onclick="window.location.replace('{% url "5" %}')">2</a><a onclick="window.location.replace('{% url "12" %}')">3</a>8<a onclick="window.location.replace('{% url "10" %}')">4</a>626<a onclick="window.location.replace('{% url "10" %}')">4</a><a onclick="window.location.replace('{% url "12" %}')">33</a>...
             </p>
 
             <!--   Answer -   2-->
