--- a/chub/templates/chub/Q6.html
+++ b/chub/templates/chub/Q6.html
@@ -35,8 +35,8 @@
                 <span style="padding-left: 4%;padding-right: 5%;">5</span>
                 <span style="padding-left: 4%;padding-right: 5%;">10</span>
                 <span style="padding-left: 4%;padding-right: 5%;">50</span>
-                <span style="padding-left: 4%;padding-right: 5%;">100</span>
                 <span style="padding-left: 4%;padding-right: 5%;">25</span>
+                <span style="padding-left: 4%;padding-right: 5%;">100</span>
                 <span style="padding-left: 4%;padding-right: 5%;">10</span>
                 <span style="padding-left: 4%;padding-right: 5%;">5</span>
                 <br><br>
@@ -50,7 +50,7 @@
 
                
             </div>
-<p>The Antonine Wall, known to the Romans as Vallum Antonini, was a turf fortification on stone foundations, built by the Romans across what is now the Central Belt of Scotland, between the Firth of Forth and the Firth of Clyde. Built some twenty years after Hadrian's Wall to the south, and intended to supersede it, while it was garrisoned it was the northernmost frontier barrier of the Roman Empire. It spanned approximately 125 kilometres and was about 3 metres (10 feet) high and 5 metres (16 feet) wide. Lidar scans have been carried out to establish the length of the wall and the Roman distance units used. Security was bolstered by a deep ditch on the northern side. It is thought that there was a wooden palisade on top of the turf. The barrier was the second of two "great walls" created by the Romans in Great Britain in 160 AD. Its ruins are less evident than those of the better-known and longer Hadrian's Wall to the south, primarily because the turf and wood wall has largely weathered away, unlike its stone-built southern predecessor.
+<p>The Antonine Wall, known to the Romans as Vallum Antonini, was a turf fortification on stone foundations, built by the Romans across what is now the Central Belt of Scotland, between the Firth of Forth and the Firth of Clyde. Built some <a onclick="window.location.replace('{% url "5" %}')">50</a> years after Hadrian's Wall to the south, and intended to supersede it, while it was garrisoned it was the northernmost frontier barrier of the Roman Empire. It spanned approximately <a onclick="window.location.replace('{% url "8" %}')">125</a> kilometres and was about 3 metres (10 feet) high and 5 metres (16 feet) wide. Lidar scans have been carried out to establish the length of the wall and the Roman distance units used. Security was bolstered by a deep ditch on the northern side. It is thought that there was a wooden palisade on top of the turf. The barrier was the second of two "great walls" created by the Romans in Great Britain in <a onclick="window.location.replace('{% url "24" %}')">160</a> AD. Its ruins are less evident than those of the better-known and longer Hadrian's Wall to the south, primarily because the turf and wood wall has largely weathered away, unlike its stone-built southern predecessor.
                 </p>
             
            
