--- a/chub/templates/chub/Q9.html
+++ b/chub/templates/chub/Q9.html
@@ -30,12 +30,12 @@
                 A child is running up a staircase with 5 steps where he can take 1,2 or 3 steps at a time. In how many ways can he reach the 5th stair if he start from ground (0th stair).             </p><br><br>
 
             <p>
-                The Large Hadron Collider (LHC) is the world's largest and highest-energy particle collider. It was built by the European Organization for Nuclear Research (CERN) between 1998 and 2008 in collaboration with over 10,000 scientists and hundreds of universities and laboratories, as well as more than 100 countries.It lies in a tunnel 27 kilometres (17 mi) in circumference and as deep as 175 metres (574 ft) beneath the France–Switzerland border near Geneva.
+                The Large Hadron Collider (LHC) is the world's largest and highest-energy particle collider. It was built by the European Organization for Nuclear Research (CERN) between 1998 and 2008 in collaboration with over 10,000 scientists and hundreds of universities and laboratories, as well as more than 100 countries.It lies in a tunnel 27 kilometres (<a onclick="window.location.replace('{% url "14" %}')">17</a> mi) in circumference and as deep as 175 metres (574 ft) beneath the France–Switzerland border near Geneva.
             </p>
 
-            <p>The first collisions were achieved in 2010 at an energy of 3.5 teraelectronvolts (TeV) per beam, about four times the previous world record.After upgrades it reached 6.5 TeV per beam (13 TeV total collision energy). At the end of 2018, it was shut down for three years for further upgrades.
+            <p>The first collisions were achieved in 2010 at an energy of 3.5 teraelectronvolts (TeV) per beam, about four times the previous world record.After upgrades it reached 6.5 TeV per beam (<a onclick="window.location.replace('{% url "7" %}')">13</a> TeV total collision energy). At the end of 2018, it was shut down for three years for further upgrades.
             </p>
-            <p>The collider has four crossing points where the accelerated particles collide. Seven detectors, each designed to detect different phenomena, are positioned around the crossing points. The LHC primarily collides proton beams, but it can also accelerate beams of heavy ions: lead–lead collisions and proton–lead collisions are typically performed for one month a year.
+            <p>The collider has four crossing points where the accelerated particles collide. <a onclick="window.location.replace('{% url "16" %}')">7</a> detectors, each designed to detect different phenomena, are positioned around the crossing points. The LHC primarily collides proton beams, but it can also accelerate beams of heavy ions: lead–lead collisions and proton–lead collisions are typically performed for one month a year.
             </p>
             <p>The LHC's goal is to allow physicists to test the predictions of different theories of particle physics, including measuring the properties of the Higgs boson searching for the large family of new particles predicted by supersymmetric theories,and other unresolved questions in particle physics.
             </p>
