--- a/chub/templates/chub/Q16.html
+++ b/chub/templates/chub/Q16.html
@@ -47,9 +47,41 @@
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
+        a{
+            color: red;
+        }
         </style>
-</body>
 
+</body>
+<script>
+for(i=0;i<document.getElementsByTagName("a").length;i++)
+    {
+    document.getElementsByTagName("a")[i].addEventListener("click",(e)=>{
+            e.preventDefault()
+           if(i==0)
+           {
+            var data={
+                question: 16,    
+                score:1,
+            }
+        }
+        else
+        {
+            var data={
+                question: 16,    
+                score:0,
+              }
+        }
+        fetch("{% url '16' %}",{
+            method:"POST" ,
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body : JSON.stringify(data)
+        })  
+    })
+}
+</script>
 </html>
 
 
