--- a/chub/templates/chub/Q5.html
+++ b/chub/templates/chub/Q5.html
@@ -46,7 +46,39 @@
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
+        a{
+            color:red;
+        }
         </style>
 </body>
+<script>
+for(i=0;i<document.getElementsByTagName("a").length;i++)
+    {
+    document.getElementsByTagName("a")[i].addEventListener("click",(e)=>{
+            e.preventDefault()
+           if(i==2)
+           {
+            var data={
+                question: 5,    
+                score:1,
+            }
+        }
+        else
+        {
+            var data={
+                question: 5,    
+                score:0,
+              }
+        }
+        fetch("{% url '5' %}",{
+            method:"POST" ,
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body : JSON.stringify(data)
+        })  
+    })
+}
 
+</script>
 </html>
