--- a/chub/templates/chub/Q7.html
+++ b/chub/templates/chub/Q7.html
@@ -31,34 +31,16 @@
            
 
                 <div class="size3  " style="color: rgba(247, 234, 205, 0.91);">
-                    An integer matrix of size (4 x 4) has been given. Find out the minimum cost to reach from the cell (1, 1) to (4, 4). 
-                    From a cell (i, j), you can move in three directions: 
-                    <ul>
-                        <li>((i + 1), j) which is, "down" </li>
-                        <li>(i, (j + 1)) which is, "to the right" </li>
-                        <li>((i+1), (j+1)) which is, "to the diagonal" </li>
-                    </ul>
-                    The cost of a path is defined as the sum of each cell's values through which the route passes. 
-                    <center>
-                        <div style="font-size:150%;">
-                            1 7 9 2 <br>
-                            8 6 3 2 <br>
-                            1 6 7 8 <br>
-                            2 9 8 2 <br>
-                            <br><br>
-                        </div>
-                    </center>
-                    
-
+                    There are 25 horses in a stable. The owner of the stable wants to find out the fastest 3 horses so that he can use them in the upcoming horse race whose winning amount is $1000. He has a track which is 10 m in width. Each horse occupy 2m  of width. How many minimum number of races he had to conduct in order to find the fastest 3 horses? 
 
                 </div>
                 <p>
                     James Carr Walton (born June 7, 1948) is an American businessman, currently the heir to the fortune of Walmart, the world's largest retailer. As of March 2022, Walton was the seventeenth-richest person in the world, with a net worth of US$62.5 billion according to Bloomberg Billionaires Index. He is the youngest son of Sam Walton.
                 </p>
-                On October 15, 2015, The Baton Rouge Advocate in the capital city of Baton Rouge, Louisiana, reported that PAC-Empower Louisiana had allocated about $818,000 to candidates running for the Louisiana Board of Elementary and Secondary Education who support the Common Core State Standards Initiative. The political action committee members include Alice and Jim Walton, Eli Broad of Los Angeles, California, and the trade association, the Louisiana Association of Business and Industry. Four candidates in eight districts, including Sandy Holloway, James Garvey in District 1 (suburban New Orleans), and Holly Boffy were declared "acceptable" to the PAC. Holloway collected $87,696; Garvey, the board vice president, $230,459; Boffy, another incumbent from Lafayette, $107,145.The Common Core candidates staged major victories in the primary election held on October 24, 2015.
+               <p> On October 15, 2015, The Baton Rouge Advocate in the capital city of Baton Rouge, Louisiana, reported that PAC-Empower Louisiana had allocated about $818,000 to candidates running for the Louisiana Board of Elementary and Secondary Education who support the Common Core State Standards Initiative. The political action committee members include Alice and Jim Walton, Eli Broad of Los Angeles, California, and the trade association, the Louisiana Association of Business and Industry. Four candidates in eight districts, including Sandy Holloway, James Garvey in District 1 (suburban New Orleans), and Holly Boffy were declared "acceptable" to the PAC. Holloway collected $87,696; Garvey, the board vice president, $230,459; Boffy, another incumbent from Lafayette, $107,145.The Common Core candidates staged major victories in the primary election held on October 24, 2015.
+                </p>
 
-
-            <!-- Answer    -   16    -->
+            <!-- Answer    -   7    -->
         </div>
 
         
