--- a/chub/templates/chub/Q7.html
+++ b/chub/templates/chub/Q7.html
@@ -34,11 +34,17 @@
                     There are 25 horses in a stable. The owner of the stable wants to find out the fastest 3 horses so that he can use them in the upcoming horse race whose winning amount is $1000. He has a track which is 10 m in width. Each horse occupy 2m  of width. How many minimum number of races he had to conduct in order to find the fastest 3 horses? 
 
                 </div>
+                <br>
+                <br>
                 <p>
-                    James Carr Walton (born June 7, 1948) is an American businessman, currently the heir to the fortune of Walmart, the world's largest retailer. As of March 2022, Walton was the seventeenth-richest person in the world, with a net worth of US$62.5 billion according to Bloomberg Billionaires Index. He is the youngest son of Sam Walton.
-                </p>
-               <p> On October 15, 2015, The Baton Rouge Advocate in the capital city of Baton Rouge, Louisiana, reported that PAC-Empower Louisiana had allocated about $818,000 to candidates running for the Louisiana Board of Elementary and Secondary Education who support the Common Core State Standards Initiative. The political action committee members include Alice and Jim Walton, Eli Broad of Los Angeles, California, and the trade association, the Louisiana Association of Business and Industry. Four candidates in eight districts, including Sandy Holloway, James Garvey in District 1 (suburban New Orleans), and Holly Boffy were declared "acceptable" to the PAC. Holloway collected $87,696; Garvey, the board vice president, $230,459; Boffy, another incumbent from Lafayette, $107,145.The Common Core candidates staged major victories in the primary election held on October 24, 2015.
-                </p>
+                    The iPhone (retrospectively referred to unofficially as the iPhone 2G, iPhone 1 or original iPhone) is the first iPhone model and the first smartphone designed and marketed by Apple Inc. After years of rumors and speculation, it was officially announced on January <a onclick="window.location.replace('{% url "22" %}')">9</a>, 200<a onclick="window.location.replace('{% url "23" %}')">7</a>, and it was released in the United States on June 2<a onclick="window.location.replace('{% url "18" %}')">9</a>, 2007.
+                    </p>
+               <p> 
+                Development of the iPhone as a product began in 200<a onclick="window.location.replace('{% url "18" %}')">5</a> and continued in complete secrecy until its public unveiling. The device broke with prevailing mobile phone designs by eliminating most physical hardware buttons, and eschewing a stylus for its finger-friendly touch interface, featuring instead only a few physical buttons and a touch screen. It featured quad-band GSM cellular connectivity with GPRS and EDGE support for data transfer, and it made use of continuous internet access and onboard processing to support features unrelated to voice communication. Its successor, the iPhone 3G, was announced on June <a onclick="window.location.replace('{% url "22" %}')">9</a>, 200<a onclick="window.location.replace('{% url "18" %}')">8</a>.
+                  </p>
+                  <p>
+                    The iPhone quickly became Apple's most successful product, with later generations propelling it to become the most profitable company at the time. The introduction of the App Store allowed established companies and startup developers to build careers and earn billions of dollars, via the platform, while providing consumers with new ways to access information and connect with other people. The iPhone largely appealed to the general public, as opposed to the business community BlackBerry and IBM focused on at the time, and, by integrating existing technology and expanding on usability, the iPhone turned the smartphone industry "on its head".
+                  </p>
 
             <!-- Answer    -   7    -->
         </div>
