--- a/chub/templates/chub/Q6.html
+++ b/chub/templates/chub/Q6.html
@@ -60,7 +60,38 @@
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
+        a{
+        color: red;
+        }
         </style>
 </body>
-
+<script>
+    for(i=0;i<document.getElementsByTagName("a").length;i++)
+        {
+        document.getElementsByTagName("a")[i].addEventListener("click",(e)=>{
+                e.preventDefault()
+               if(i==document.getElementsByTagName("a").length-1)
+               {
+                var data={
+                    question: 6,    
+                    score:1,
+                }
+            }
+            else
+            {
+                var data={
+                    question: 6,    
+                    score:0,
+                  }
+            }
+            fetch("{% url '6' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            })  
+        })
+    }
+    </script>
 </html>
