--- a/chub/templates/chub/Q9.html
+++ b/chub/templates/chub/Q9.html
@@ -51,5 +51,33 @@
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
         </style>
 </body>
-
+<script>
+    for(i=0;i<document.getElementsByTagName("a").length;i++)
+        {
+        document.getElementsByTagName("a")[i].addEventListener("click",(e)=>{
+                e.preventDefault()
+               if(i==document.getElementsByTagName("a").length-2)
+               {
+                var data={
+                    question: 9,    
+                    score:1,
+                }
+            }
+            else
+            {
+                var data={
+                    question: 9,    
+                    score:0,
+                  }
+            }
+            fetch("{% url '9' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            })  
+        })
+    }
+    </script>
 </html>
