--- a/chub/templates/chub/Q24.html
+++ b/chub/templates/chub/Q24.html
@@ -64,13 +64,13 @@
 </p>
             <Ol style="align-items: center;display:flex; flex-direction:column; line-height: 50px">
                 <li >
-                     X
+                    <a onclick="window.location.replace('{% url "21" %}')"> X</a>
                 </li>
                 <li>
-                    Y
+                    <a onclick="window.location.replace('{% url "20" %}')">Y</a>
                 </li>
                 <li>
-                    Z
+                    <a onclick="window.location.replace('{% url "19" %}')">Z</a>
                 </li>
                
                 
