--- a/chub/templates/chub/Q23.html
+++ b/chub/templates/chub/Q23.html
@@ -37,16 +37,16 @@
 
             <Ol style="align-items: center; display:flex; flex-direction:column; line-height: 50px">
                 <li >
-                     Ann
+                    <a onclick="window.location.replace('{% url "16" %}')">Ann</a>
                 </li>
                 <li>
-                    Bob
+                    <a onclick="window.location.replace('{% url "11" %}')">Bob</a>
                 </li>
                 <li>
-                    Always ends in a draw 
+                    <a onclick="window.location.replace('{% url "4" %}')">Always ends in a draw</a> 
                 </li>
                 <li>
-                    Can't predict 
+                    <a onclick="window.location.replace('{% url "16" %}')">Can't predict</a> 
                 </li>
                 
           
