--- a/chub/templates/chub/Q23.html
+++ b/chub/templates/chub/Q23.html
@@ -61,10 +61,40 @@
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
-      
+      a{
+        color: red;
+      }
         </style>
 </body>
-
+<script>
+    for(i=0;i<document.getElementsByTagName("a").length;i++)
+        {
+        document.getElementsByTagName("a")[i].addEventListener("click",(e)=>{
+                e.preventDefault()
+               if(i== 2)
+               {
+                var data={
+                    question: 23,    
+                    score:1,
+                }
+            }
+            else 
+            {
+                var data={
+                    question: 23,    
+                    score:0,
+                  }
+            }
+            fetch("{% url '23' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            })  
+        })
+    }
+    </script>
 </html>
 
 
