--- a/chub/templates/chub/Q24.html
+++ b/chub/templates/chub/Q24.html
@@ -86,9 +86,40 @@
     </div>
     <style>
         @import url('http://fonts.cdnfonts.com/css/avenir-lt-std');
+        a{
+            color: red;
+        }
         </style>
 </body>
-
+<script>
+    for(i=0;i<document.getElementsByTagName("a").length;i++)
+        {
+        document.getElementsByTagName("a")[i].addEventListener("click",(e)=>{
+                e.preventDefault()
+               if(i== 0)
+               {
+                var data={
+                    question: 24,    
+                    score:1,
+                }
+            }
+            else 
+            {
+                var data={
+                    question: 24,    
+                    score:0,
+                  }
+            }
+            fetch("{% url '24' %}",{
+                method:"POST" ,
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body : JSON.stringify(data)
+            })  
+        })
+    }
+    </script>
 </html>
 
 
