--- a/chub/templates/chub/login.html
+++ b/chub/templates/chub/login.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHNOTHLON</title>
-    <link rel="stylesheet" href="{% static "css/style.css" %}">
+    <link rel="stylesheet" href="{% static "css/login.css" %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200&family=DynaPuff&family=Open+Sans&display=swap"
@@ -19,7 +19,7 @@
     <div class="FLEX main">
         <div class="FLEX2 size">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="{%static "\images\Technothlon white.svg" %}" alt="">
+            <img src="{%static "\images\Technothlon white.svg" %}" class="image12" alt="">
         </div>
         <div class="flex1">
             <div class="left_techno border center">
@@ -28,7 +28,6 @@
             </div>
             <div class="border center flex1">
                 LOGIN
-                <hr>
                 {% comment %} <div style="margin-top: 15px;margin-bottom: 5px;font-size: 28px; color: red">
                     your id password is incorrect
                 </div> {% endcomment %}
@@ -39,17 +38,21 @@
                     <p style="font-size:18px">{{error}}</p>
                     {%endfor%}
                     {%endif%}
-                    <div class="username">
+                    <div class="username ">
                         {{form.username.label}}
+                        <br>
                         {{form.username}}
+                        <br>
                         {{form.password.label}}
+                        <br>
                         {{form.password}}
+                        <br>
                     </div>
 
                     <div class="error">{{form.username.errors|striptags}}
                         {{form.password.errors|striptags}}</div>
                     
-                    <button class="button"><a onclick="window.location.replace('{% url "guide"%}')">Login</a></button>
+                    <button class="button"><a onclick="window.location.replace('{% url "guide" %}')">Login</a></button>
                 </form>
           
             </div>
