--- a/chub/templates/chub/guidelines.html
+++ b/chub/templates/chub/guidelines.html
@@ -26,40 +26,21 @@
 
 
         <div class="size3 flex ">
+            <div class="size3 flex ">
 
-            <ul>
-                <li>There will be 4 separate levels in this hunt. Try to hunt as much as you can.
-                    <ul>
-                        <li>Level 1 : Fangs of Death and Hell </li>
-                        <li>Level 2 : Secret in the Shadows</li>
-                        <li>Level 3 : Realm of Mystery</li>
-                        <li>Level 4 : Lure of the Present</li>
-                    </ul>
-                </li>
-                <li>The official hunt was held live on 5th September 2021, but now we are releasing it for anyone to
-                    attempt at
-                    any time. Modifications include :
-                    <ul>
-                        <li>You can go back to previous levels which you have solved.</li>
-                        <li>There are Detailed hint and Answer options added in case you feel very clueless go for
-                            the Detailed
-                            hint, but it mostly contains dead-giveaways so it might ruin the experience for you if
-                            you use it. We
-                            recommend you try as hard as you can without it. This was not there in the original
-                            hunt. Also, in the
-                            original hunt, a penalty of 20 minutes was added for every hint accessed.</li>
-                    </ul>
-                </li>
-                <li>Submit the answer in the form which is shown at the end of each level. Once you submit, the link
-                    for the
-                    next level will be displayed. For some levels, finding where the portal is, is also part of the
-                    hunt !</li>
-                <li>You are allowed to make as many guesses as you want.</li>
-                <li>Since this was a common doubt during the actual game, we will clarify it here itself - you can
-                    include
-                    spaces in the answers if required. For level 1, the answer is case-insensitive. </li>
-                <li>Participants are free to use the internet and other resources to solve the levels.</li>
-            </ul>
+                <p> You went to a magical forest to find some super power. The forest being magical contains trees which can speak because it contains spirit of noble men who would guide only the deserving towards the super power. 
+                    At each turn the noble men would ask you one question and help you with the way ahead if you give the correct answer or send you to some other random tree, can be the one with whom you already had a talk before, on answering wrong. 
+                </p>
+                <p>The more wrong answers you give the more longer the way to the super power becomes.</p>
+                <p>There are two types of questions which the noble men would ask on the way.</p>
+                <ul>
+                    <li>Option type</li>
+                    <p>In these type of Questions the noble men would ask you a question and narrate a passage in front of you and you need to find the correct answer from the narrated passage. Clicking the correct answer would bring you closer to the super power while clicking wrong answer will carry you farther from the super power. </p>
+                    <li>Submit type</li>
+                    <p>In this type of questions the noble men will ask you question and you need to tell the correct answer. Type the answer in the space provided and submit it. In case the answer is a word, you can submit it in any case thai is upper or lower case (your wish). </p>
+                </ul>
+                <p>Are you the derserving one to get the super power?? This is the chance to prove yourself. All the best!!!</p>
+            </div>
         </div>
 
         <div class="margin_bottom">
