--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -36,17 +36,16 @@
 
 
             <!--  Answer  -   3    -->
-            <div>
-                <div >
+            <div class="center111">
+                <div>
                     <label for="Answer">Answer</label>
-                    <input type="text" name="Answer" id="input"> 
+                    <input type="text" name="Answer">
                 </div>
-
-                <div >
-                    <!-- <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button> -->
+                    <div>
+                        <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    </div>
                 
-                <button class="button"><a>Submit</a></button>
-                </div>
+
             </div>
            
         </div>
