--- a/chub/templates/chub/Q22.html
+++ b/chub/templates/chub/Q22.html
@@ -33,16 +33,16 @@
                     then who will win the game if both plays optimally.
                 </div>
             </div>
-            <div>
-                <div class="margin">
+            <div class="center111">
+                <div>
                     <label for="Answer">Answer</label>
                     <input type="text" name="Answer">
                 </div>
+                    <div>
+                        <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    </div>
+                
 
-                <div>
-                    <button class="button "><a>Submit</a></button>
-                   
-                </div>
             </div>
         </div>
     </div>
