--- a/chub/frontent/css/style3.css
+++ b/chub/frontent/css/style3.css
@@ -10,7 +10,12 @@ body {
     font-family: 'Avenir LT Std';
 
 }
-
+.center111{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction:column ;
+}
 .flex {
     display: flex;
     justify-content: center;
