--- a/chub/templates/chub/Q11.html
+++ b/chub/templates/chub/Q11.html
@@ -43,15 +43,16 @@
                 </div>
             </div>
             <!-- Answer  -  B   -->
-            <div>
-                <div >
+            <div class="center111">
+                <div>
                     <label for="Answer">Answer</label>
-                    <input type="text" id ="input" name="Answer">
+                    <input type="text" name="Answer">
                 </div>
+                    <div>
+                        <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                    </div>
+                
 
-                <div >
-                    <button class="button "><a>Submit</a></button>
-                </div>
             </div>
            
         </div>
