--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -40,7 +40,7 @@
                         <input type="text" name="Answer">
                     </div>
                         <div>
-                            <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button>
+                           <a>Submit</a>
                         </div>
                     
     
