--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -28,11 +28,11 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                    A and B are playing a new game today. They form a tower of 15 coins and make a move in alternate turns. Beerus plays first. In one step, the player can remove either 1, 2, or 4 coins from the tower. The person to make the last move wins the game. Can you find out who wins the game? A starts the game. 
+                    Anoukalesio and Zaneverett are playing a new game today. They form a tower of 15 coins and make a move in alternate turns. Beerus plays first. In one step, the player can remove either 1, 2, or 4 coins from the tower. The person to make the last move wins the game. Can you find out who wins the game? A starts the game. 
 
                 </div>
             </div>
-            <!-- Answer  -  B   -->
+            <!-- Answer  - Zaneverett   -->
             <div>
                 <div>
                     <div >
