--- a/chub/templates/chub/Q10.html
+++ b/chub/templates/chub/Q10.html
@@ -17,7 +17,7 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="..\images\Technothlon white.svg" alt="">
+            <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
             Round 10
