--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TECHNOTHLON</title>
-    <link rel="stylesheet" href="..\css\style3.css">
+    <link rel="stylesheet" href="{% static '/css/style3.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="http://fonts.cdnfonts.com/css/avenir-lt-std" rel="stylesheet">
@@ -17,7 +17,7 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="..\images\Technothlon white.svg" class="img1" alt="">
+            <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <br>
         <div class="flex direction font_size">
