--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -56,7 +56,7 @@
 let correct =true;
     document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
       e.preventDefault()
-        if(document.getElementById("input").value.toLowerCase()!='b')   
+        if(document.getElementById("input").value.toLowerCase()!='zaneverett')   
         { 
             var data={
                 question: 3,    
