--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -42,7 +42,7 @@
     
                     <div >
                         <!-- <button class="button "><a onclick="window.location.replace('index4.html')">Submit</a></button> -->
-                        <button>Submit</button>
+                        <button class-"button"><a>Submit</a></button>
                     </div>
                 </div>
                
