--- a/chub/templates/chub/Q5.html
+++ b/chub/templates/chub/Q5.html
@@ -27,7 +27,7 @@
 
         <div class="size3 ">
             <p style="color: rgba(247, 234, 205, 0.91);">
-                Wonderland has a very strange monetary system. Each Wonderland gold coin has an integer 20 written on it. A coin can be exchanged in a bank into three coins: 10,6 and 5. You can also sell Wonderland coins for American dollars. The exchange rate is 1:1. But you can not buy wonderland coins. You have one gold coin. What is the maximum amount of American dollars you can get for it? 
+                Wonderland has a very strange monetary system. Each Wonderland gold coin has an integer 20 written on it. A coin can be exchanged in a bank into three coins: 10,6 and 5. You can sell Wonderland coins for American dollars. The exchange rate is 1:1. But you can not buy wonderland coins. You have one wonderland gold coin. What is the maximum amount of American dollars you can get for one wonderland gold coin? 
             </p><br><br>
 
             <p>
